--- a/snippets.html
+++ b/snippets.html
@@ -1,9 +1,73 @@
 <div>
 	<h3>Flexbox Row</h3>
-	<p>Use these propoerties...</p>
+	<p>Use these propoerties to create a Flexbox row layout.</p>
 	<code>
 		.row {
 			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+		}
+	</code>
+</div>
+
+<div>
+	<h3>Flexbox Column</h3>
+	<p>Use this to create a Flexbox column layout.</p>
+	<code>
+		.column {
+			display: flex;
+			flex-direction: column
+		}
+	</code>
+</div>
+
+<div>
+	<h3>CSS Grid Layout</h3>
+	<p>Build a 12-column layout using CSS Grid</p>
+	<code>
+		.grid {
+			display: grid;
+			width: 100%;
+			grid-template-columns: repeat(12, 1fr);
+		}
+	</code>
+</div>
+
+<div>
+	<h3>Linear Gradients</h3>
+	<p>This will create a background linear gradient from top to bottom.</p>
+	<code>
+		.linear-gradient-background {
+			background-image: linear-gradient(rbga(232, 102 ,236, 0.3) 0%, rbga(232, 102 ,236, 0.6) 100%,);
+		}
+	</code>
+</div>
+
+<div>
+	<h3>Box Transition Glow</h3>
+	<p>Use transition and box shadows to glow on hover.</p>
+	<code>
+		.code-card .card-header {
+			border-radius: 8px;
+			transition: all 0.5s ease-in-out;
+		}
+
+		.code-card:hover, .code-card:hover
+		.card-header {
+			box-shadow: inset 0px 0px 8px
+			rbga(232, 102 ,236, 1), 0 0 15px
+			rbga(232, 102 ,236, 1);
+		}
+	</code>
+</div>
+
+<div>
+	<h3>Overlay Card with Title</h3>
+	<p>Use position properties and negative margins to raise elements higher than their natural starting point.</p>
+	<code>
+		card-header {
+			position: relative;
+			margin-top: -20px;
 		}
 	</code>
 </div>
